--- a/project_order_dice/Config/away.yaml
+++ b/project_order_dice/Config/away.yaml
@@ -1,12 +1,32 @@
-- name: Henning
-  is_away: True
-- name: Steffen
-  is_away: false
-- name: Jessica
-  is_away: false
-- name: Sarah
-  is_away: false
-- name: Hannes
-  is_away: false
-- name: Mathis
-  is_away: false
+# If a person is away for a longer period of time please put them on is-away: True.
+away:
+  - name: Henning
+    is_away: false
+  - name: Steffen
+    is_away: false
+  - name: Jessica
+    is_away: false
+  - name: Sarah
+    is_away: false
+  - name: Hannes
+    is_away: false
+  - name: Mathis
+    is_away: false
+
+# Vacation dates only in this format YYYY-MM-DD (example 2023-06-26).
+vacation:
+  - start_date:
+    end_date:
+    names:
+
+# Here you can exclude people depending on days of the week.
+Monday:
+  - names:
+Tuesday:
+  - names:
+Wednesday:
+  - names:
+Thursday:
+  - names:
+Friday:
+  - names:
